client/css/main.css
/* ... */
.event-block-mockup{
    height: auto;
    width: 800px;
    margin: 0 auto;
    margin-top: 50px;
    padding-bottom: 100px;
}

.banner-mockup-shadow{
    height: 400px;
    width: 800px;
    margin: 0 auto;
    background: -moz-linear-gradient(left, rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 */
    margin-top: -400px;

}
.navbar-landing{
    position: absolute;
    width: 100%;
    z-index: 9999;
}
.mockup-menu{
    display: inline-block;
    width: 50px;
    height: 8px;
    background: white;
    margin-left: 10px;
    margin-bottom: 1px;
}
.banner-menu-mockup{
    list-style: none;
    border-right: 1px solid white;
    /* background-color: white; */
    border-left: 1px solid white;
    width: 280px;
    padding: 5px;
    margin-left: 340px;
    margin-top: 10px;
}
.mockup-btn{

    height: 31px;
    width: 120px;
    background: #63ada4;
    margin-left: -40px;
    margin-top: 10px;
}
.banner-menu-btns{
    list-style: none;
    width: 150px;
    height: 60px;
    position: absolute;
    right: 0;
    top: 0;
}
.mockup-btn-2{
    height: 31px;
    width: 120px;
    background: white;
    margin-left: -40px;
    margin-top: 10px;
}
#logo{
    height: 60px;
    margin-top: 20px;
    cursor: default;
}

#mockup-logo{
    height: 32px;
    position: absolute;
    top: 10px;
    left: 50px;
}
.worker-section-title{
    font-size: 62px;
    font-family: Play;
}
.worker-section-text{
    font-size: 16px;
    font-family: spaceMono;
    margin-top: 50px;
}
.menu-section-title{
    font-size: 62px;
    font-family: Play;
    color:white;
}
.menu-section-text{
    font-size: 16px;
    font-family: spaceMono;
    margin-top: 50px;
    color:white;
}
.section-mockup{
    width: 50px;
    height: 5px;
    background: black;
    display: block;
    margin-left: 20px;
}
.worker-section-title-mockup{
    font-size: 38px;
    font-family: Play;
    margin-left: 20px;
}
.worker-section-text-mockup{
    font-size: 12px;
    font-family: spaceMono;
    margin-top: 30px;
    margin-right: 20px;
}
.menu-section-title-mockup{
    font-size: 38px;
    font-family: Play;
    margin-left: 20px;
    color:white;
}
.event-section-title-mockup{
    font-size: 38px;
    font-family: Play;
    margin-left: 20px;
    color:black;
}
.menu-section-title-mockup.editable-click{
    color:white !important;
}
.menu-section-text-mockup{
    font-size: 12px;
    font-family: spaceMono;
    margin-top: 30px;
    margin-right: 20px;
    color:white;
}
.menu-section-text-mockup.editable-click{
    color:white !important;
}
.editable-buttons{
    position: absolute;
    top: 160px;
    left: 30px;
}
.editable-input.editable-has-buttons {
    width: 350px !important;
    height: 150px;
    margin-left: 20px;
}
.editable-click,
a.editable-click{
    text-decoration: none !important;
    color: black !important;
    border: none !important;
}
.add-new-worker-btn{
    background-color: #63ada4;
    color:white;
    padding: 10px;
    width: 350px;
    margin: 0 auto;
    display: block;
    font-family: spaceMono;
    border:none;
}
.add-new-worker-btn:hover,
.add-new-worker-btn:active,
.add-new-worker-btn:focus{
    outline:none;
    text-decoration: none;
}

.picture-holder{
    height: 250px;
    width: 250px;
    border: 1px dashed #CCCCCC;
    margin-top: 25px;
    background-size: cover;
    background-repeat: no-repeat;
}


#mobilelogo {
    margin-bottom: -180px;
    height: 160px;
    margin-top: 20px;
    margin-left: 25rem;
    cursor: default;

}

img.whiteguide {
    height: auto;
    margin-top: 10px;
}

/* Up to Tablet-max */
@media only screen and (max-width: 991px) {
    img.whiteguide {
        width: 47px;
    }
}

/* Desktop-min & up */
@media only screen and (min-width: 992px) {
    img.whiteguide {
        width: 60px;
    }
}

@media only screen and (max-width: 1024px) {

.mobilelogo{
        margin-left: -25rem;
    }
}

@media only screen and (min-width: 320px) and (max-width: 1024px) {

.mobilelogo{
    display:inline-flex;

    margin-right: 13rem;
    margin-bottom: -20rem;
    }
}
@media only screen and (min-width: 1720px) {

.mobilelogo{
        margin-left: 25rem;

    }
}
@media only screen and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
  .mobilelogo {
       display:inline-flex;
       margin-left: -45em;
       margin-top: 4em;
    } /* css rules for ipad portrait mode */
}
@media only screen and (device-width: 480px) and (device-height: 854px) and (orientation:portrait) {
    .mobilelogo {
         display:inline-flex;
         margin-left: -35em;
         margin-top: 4em;
      }
  }
  @media only screen and (device-width: 600px) and (device-height: 1024px) and (orientation:portrait) {
    .mobilelogo {
        display:inline-flex;
        margin-left: -39em;
        margin-top: 4em;
      }
  }

@media only screen and (min-device-width : 800px) and (max-device-width: 1280px) {
    .mobilelogo {
       display:inline-flex;
       margin-left: -46em;
       margin-top: 3em;
    }
}

@media only screen and (min-device-width : 950px) and (max-device-width: 1280px) {
    .mobilelogo {
       display:block;
       margin-left: -13.5em;
       margin-bottom: -8rem;
    }
}

.worker-img-holder{
    height: 350px;
    background-size: cover;
    background-repeat: no-repeat;
}
.worker-name{
    font-family: spaceMono-Bold;
    margin-top: 60px;
    cursor: default;
}
.worker-occupation{
    font-size: 14px;
    font-family: spaceMono;
    text-transform: uppercase;
    color: #CCCCCC;
    margin-top: -10px;
    cursor: default;
}
/* ... */

